--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(evheap evheap.cpp)
 
 if (WIN32)
+  target_compile_definitions(evheap PRIVATE -D_CRT_SECURE_NO_WARNINGS)
   target_link_libraries(evheap event e4pp)
 else()
   target_link_libraries(evheap event event_pthreads pthread e4pp)
@@ -16,7 +17,8 @@ endif()
 add_executable(evhttpsrv evhttpsrv.cpp)
 
 if (WIN32)
-  target_link_libraries(evhttpsrv event e4pp)
+target_compile_definitions(evhttpsrv PRIVATE -D_CRT_SECURE_NO_WARNINGS)
+target_link_libraries(evhttpsrv event e4pp)
 else()
   target_link_libraries(evhttpsrv event event_pthreads pthread e4pp)
 endif()
