--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,15 @@ option(E4PP_BUILD_EXAMPLES "build examples" OFF)
 
 if (E4PP_BUILD_EXAMPLES)
     if (WIN32)
-        set(LIBEVENT_STATIC_LINK TRUE)
+        set(EVENT__LIBRARY_TYPE "STATIC" CACHE STRING "libevent static")
+        set(EVENT__DISABLE_OPENSSL ON CACHE BOOL "libevent no openssl")
+        set(EVENT__DISABLE_DEBUG_MODE ON CACHE BOOL "libevent no debug")
+        set(EVENT__DISABLE_BENCHMARK ON CACHE BOOL "libevent no benchmark")
+        set(EVENT__DISABLE_MBEDTLS ON CACHE BOOL "libevent no mbedtls")
+        set(EVENT__DISABLE_TESTS ON CACHE BOOL "libevent no tests")
+        set(EVENT__DISABLE_SAMPLES ON CACHE BOOL "libevent no samples")
+        set(EVENT__DISABLE_REGRESS ON CACHE BOOL "libevent no regress")
+        set(EVENT__DOXYGEN OFF CACHE BOOL "libevent no doxygen")
         add_subdirectory(ext/libevent)
     endif()
     add_subdirectory(example)
