--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -9,16 +9,14 @@ add_executable(evheap evheap.cpp)
 
 if (WIN32)
   target_compile_definitions(evheap PRIVATE -D_CRT_SECURE_NO_WARNINGS)
-  target_link_libraries(evheap PRIVATE event_core event_extra e4pp)
+  target_link_libraries(evheap PRIVATE e4pp event_core event_extra)
 else()
-  target_link_libraries(evheap PRIVATE event_core event_extra event_pthreads e4pp)
+  target_link_libraries(evheap PRIVATE e4pp event_core event_extra event_pthreads)
 endif()
 
 add_executable(evhttpsrv evhttpsrv.cpp)
 
 if (WIN32)
   target_compile_definitions(evhttpsrv PRIVATE -D_CRT_SECURE_NO_WARNINGS)
-  target_link_libraries(evhttpsrv PRIVATE event_core event_extra e4pp)
-else()
-  target_link_libraries(evhttpsrv PRIVATE event_core event_extra e4pp)
 endif()
+target_link_libraries(evhttpsrv PRIVATE e4pp event_core event_extra)
