--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(e4pp VERSION 1.0.0 LANGUAGES CXX)
+project(e4pp VERSION 1.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 21)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -16,6 +16,7 @@ target_include_directories(e4pp INTERFACE
 
 option(E4PP_BUILD_EXAMPLES "build examples" OFF)
 option(E4PP_STATIC_LIBEVENT "e4pp static libevent" OFF)
+option(E4PP_WITH_PRIVATE "build private example" OFF)
 
 if (E4PP_BUILD_EXAMPLES)
     add_subdirectory(ext/wslay)
